src/test/deca/context/invalid/provided/testi06.deca
class A{
    int testa(float x){}
}
class B extends A{
    int testa(int x){}
}